--- a/Mango.Web/Views/Shared/_Layout.cshtml
+++ b/Mango.Web/Views/Shared/_Layout.cshtml
@@ -8,6 +8,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/Mango.Web.styles.css" asp-append-version="true" />
+    <link rel="stylesheet"
+          href="https://unicons.iconscout.com/release/v4.0.0/css/unicons.css" />
+    <script src="https://kit.fontawesome.com/b428fe1774.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
